--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
     <title>Navbar</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="navbar">
+        <div class="dots-btn">
+          <div class="dot dot-1"></div>
+          <div class="dot dot-2"></div>
+          <div class="dot dot-3"></div>
+        </div>
+        <div class="nav-menu">
+          <a href="#" class="nav-menu-link"><i class="fas fa-home"></i></a>
+          <a href="#" class="nav-menu-link"><i class="fab fa-blogger"></i></a>
+          <a href="#" class="nav-menu-link"
+            ><i class="fas fa-project-diagram"></i
+          ></a>
+          <a href="#" class="nav-menu-link"
+            ><i class="fas fa-address-card"></i
+          ></a>
+        </div>
+      </nav>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
